--- a/public/css/style.css
+++ b/public/css/style.css
@@ -4,193 +4,8 @@
 }
 
 body {
-    /* align-items: center;
-    background: var(--white);
-    background: var(--gray);
-    display: grid; */
     height: 100vh;
-    /* place-items: center; */
 }
-
-/* :root {
-    --white: #e9e9e9;
-    --gray: #333;
-    --blue: #0367a6;
-    --lightblue: #008997;
-    
-    --button-radius: 0.7rem;
-    
-    --max-width: 758px;
-    --max-height: 420px;
-    font-size: 16px;
-}
-
-
-.form__title {
-    font-weight: 300;
-    margin: 0;
-    margin-bottom: 1.25rem;
-}
-
-.link {
-    color: var(--gray);
-    font-size: 0.9rem;
-    margin: 1.5rem 0;
-    text-decoration: none;
-}
-
-.container {
-    background: var(--white);
-    border-radius: var(--button-radius);
-    box-shadow: 0 0.9rem 1.7rem rgba(0, 0, 0, 0.25), 0 0.7rem 0.7rem rgba(0, 0, 0, 0.22);
-    height: var(--max-height);
-    max-width: var(--max-width);
-    overflow: hidden;
-    position: relative;
-    width: 100%;
-}
-
-.container__form {
-    height: 100%;
-    position: absolute;
-    top: 0;
-    transition: all 0.6s ease-in-out;
-}
-
-.container-signin {
-    left: 0;
-    width: 50%;
-    z-index: 2;
-}
-
-.container.right-panel-active .container-signin {
-    animation: show 0.6s;
-    opacity: 1;
-    transform: translateX(100%);
-    z-index: 5;
-}
-
-.container__overlay {
-    height: 100%;
-    left: 50%;
-    overflow: hidden;
-    position: absolute;
-    top: 0;
-    transition: transform 0.6s ease-in-out;
-    width: 50%;
-    z-index: 100;
-}
-
-.container.right-panel-active .container__overlay {
-    transform: translateX(-100%);
-}
-
-.overlay {
-    background: var(--lightblue);
-    height: 100%;
-    left: -100%;
-    position: relative;
-    transform: translateX(0);
-    transition: transform 0.6s ease-in-out;
-    width: 200%;
-}
-
-.container.right-panel-active .overlay {
-    transform: translateX(50%);
-}
-
-.overlay__panel {
-    align-items: center;
-    display: flex;
-    flex-direction: column;
-    height: 100%;
-    justify-content: center;
-    position: absolute;
-    text-align: center;
-    top: 0;
-    transform: translateX(0);
-    transition: transform 0.6s ease-in-out;
-    width: 50%;
-}
-
-.overlay-left {
-    transform: translateX(-20%);
-}
-
-.container.right-panel-active .overlay-left {
-    transform: translateX(0);
-}
-
-.overlay-right {
-    right: 0;
-    transform: translateX(0);
-}
-
-.container.right-panel-active .overlay-left {
-    transform: translateX(0);
-}
-
-.overlay-right {
-    right: 0;
-    transform: translateX(0);
-}
-
-.container.right-panel-active .overlay-right {
-    transform: translateX(20%);
-}
-
-.btn {
-    background-color: var(--blue);
-    background-image: linear-gradient(90deg, var(--blue) 0%, var(--lightblue) 74%);
-    border-radius: 20px;
-    border: 1px solid var(--blue);
-    color: var(--white);
-    cursor: pointer;
-    font-size: 0.8rem;
-    font-weight: bold;
-    letter-spacing: 0.1rem;
-    padding: 0.9rem 4rem;
-    text-transform: uppercase;
-    transition: transform 80ms ease-in;
-}
-
-.form > .btn {
-    margin-top: 1.5rem;
-}
-
-.btn:active {
-    transform: scale(0.95);
-}
-
-.btn:focus {
-    outline: none;
-} */
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
 
 .nav-item {
     list-style-type: none;
@@ -218,4 +33,35 @@ body {
     background: blue;
     padding: 3px 1rem;
     border-radius: 10px;
+}
+
+/* LOGIN PAGE  */
+
+.login-page {
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: space-around;
+
+    height: 90%;
+    margin: 0 15%;
+    background: orchid;
+}
+
+.sign-up-hero,
+.log-in-hero {
+    display: flex;
+    flex-direction: column;
+    width: 35%;
+    height: 15rem;
+}
+
+.log-in__auth {
+    display: flex;
+    flex-direction: column;
+}
+
+.signup-form {
+    display: flex;
+    flex-direction: column;
 }
