still trying to figure out routes stuff

--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -23,10 +23,9 @@
     {{!-- RENDER COMPONENTS HERE  --}}
     {{{body}}}
 
-
-    <script src="../../public/js/script.js"></script>
+    <script src="/js/profile.js"></script>
     {{#if logged_in}}
-    <script src="../../public/js/logout.js"></script>
+    <script src="/js/logout.js"></script>
     {{/if}}
 </body>
 </html>
