changed sequelize force to false in server, allowing logins now

--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -24,6 +24,10 @@
     {{!-- RENDER COMPONENTS HERE  --}}
     {{{body}}}
 
+    <footer class="home-ftr main-header">
+
+    </footer>
+    
     <script src="/js/profile.js"></script>
     {{#if logged_in}}
     <script src="/js/logout.js"></script>
