--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>My Tech Blog!</title>
     <link rel="stylesheet" href="../css/style.css">
+    <script src="https://kit.fontawesome.com/52d65b95b5.js" crossorigin="anonymous"></script>
 </head>
 <body>
     <header class="main-header">
@@ -13,6 +14,7 @@
         <nav class="nav-left"><a href="/" class="nav-item">tech blog</a></nav>
         <nav class="nav-right">
             <a href="/" class="nav-item">blog</a>
+            <a href="/profile" class="nav-item">profile</a>
             {{#if logged_in}}
             <a href="/" id="sign-out-button" class="nav-item login-logout">log out</a>
             {{else}}
