--- a/views/profile.handlebars
+++ b/views/profile.handlebars
@@ -3,19 +3,23 @@
         <ul class="profile-icons">
             <li class="profile-item">
                 <a href="/">
-                    <i class="fas fa-user-circle fa-2x login-logout"></i>
+                    {{!-- PROFILE INFO --}}
+                    <i class="fas fa-user-circle fa-2x login-logout" id="profile-deets"></i>
                 </a>
             </li>
             <li class="profile-item">
                 <a href="/">
+                    {{!-- ADD POST  --}}
                     <i class="fas fa-plus-circle fa-2x login-logout"></i>
                 </a>
             </li>
             <li class="profile-item">
                 <a href="/">
+                    {{!-- VIEW YOUR POSTS  --}}
                     <i class="fas fa-th-large fa-2x login-logout"></i>
                 </a>
             </li>
         </ul>
     </nav>
 </section>
+<script src="/js/profilePage.js"></script>
