still trying to figure out data appending

--- a/views/profile.handlebars
+++ b/views/profile.handlebars
@@ -2,10 +2,10 @@
     <nav class="profile-nav">
         <ul class="profile-icons">
             <li class="profile-item">
-                <a href="/">
+                {{!-- <a href="/"> --}}
                     {{!-- PROFILE INFO --}}
                     <i class="fas fa-user-circle fa-2x login-logout" id="profile-deets"></i>
-                </a>
+                {{!-- </a> --}}
             </li>
             <li class="profile-item">
                 <a href="/">
