--- a/views/profile.handlebars
+++ b/views/profile.handlebars
@@ -2,10 +2,10 @@
     <nav class="profile-nav">
         <ul class="profile-icons">
             <li class="profile-item">
-                {{!-- <a href="/"> --}}
+                <a href="/profile">
                     {{!-- PROFILE INFO --}}
                     <i class="fas fa-user-circle fa-2x login-logout" id="profile-deets"></i>
-                {{!-- </a> --}}
+                </a>
             </li>
             <li class="profile-item">
                 <a href="/">
@@ -21,5 +21,10 @@
             </li>
         </ul>
     </nav>
+
+    <div class="profile-user-info">
+        <h2 class="profile-user-name">{{first_name}} {{last_name}}</h2>
+        <h3 class="profile-email">{{email}}</h3>
+    </div>
 </section>
 <script src="/js/profilePage.js"></script>
