--- a/views/profile.handlebars
+++ b/views/profile.handlebars
@@ -2,7 +2,7 @@
     <nav class="profile-nav">
         <ul class="profile-icons">
             <li class="profile-item">
-                <a href="/profile">
+                <a href="/user">
                     {{!-- PROFILE INFO --}}
                     <i class="fas fa-user-circle fa-2x login-logout" id="profile-deets"></i>
                 </a>
@@ -21,10 +21,5 @@
             </li>
         </ul>
     </nav>
-
-    <div class="profile-user-info">
-        <h2 class="profile-user-name">{{first_name}} {{last_name}}</h2>
-        <h3 class="profile-email">{{email}}</h3>
-    </div>
 </section>
 <script src="/js/profilePage.js"></script>
