--- a/views/profile.handlebars
+++ b/views/profile.handlebars
@@ -8,7 +8,7 @@
                 </a>
             </li>
             <li class="profile-item">
-                <a href="/">
+                <a href="/blog">
                     {{!-- ADD POST  --}}
                     <i class="fas fa-plus-circle fa-2x login-logout"></i>
                 </a>
