--- a/views/project.handlebars
+++ b/views/project.handlebars
@@ -22,17 +22,18 @@
         </ul>
     </nav>
 
-    <div class="profile-user-info">
-        <div class="profile-user-info-wrapper-outer">
-            <div class="profile-user-info-wrapper">
-                <h2 class="profile-user-name">{{first_name}} {{last_name}}</h2>
-                <h3 class="profile-email">{{email}}</h3>
-            </div>
-            
-            <div class="profile-user-info-wrapper change-creds-wrapper">
-                <a class="change-creds">change your email</a>
-                <a class="change-creds">change your password</a>
-            </div>
+    <div class="profile-user-info blog-form-parent">
+        <div class="blog-form-wrapper">
+            <form class="blog-form">
+                <label class="blog-label" for="title">title</label>
+                <input id="title" class="form-input__title blog-input" name="title" type="text">
+                <label class="blog-label title-label" for="post-body">blog away!</label>
+                <textarea id="post-body" class="form-input__body blog-input" name="post-body"></textarea>
+
+                <div class="post-btn-wrapper">
+                    <button class="blog-post-btn login-logout">post!</button>
+                </div>
+            </form>
         </div>
     </div>
 </section>
