fixed hrefs in profile hbs pages to properly route to post form

--- a/views/myposts.handlebars
+++ b/views/myposts.handlebars
@@ -22,19 +22,7 @@
         </ul>
     </nav>
 
-    <div class="profile-user-info blog-form-parent">
-        <div class="blog-form-wrapper">
-            <form class="blog-form">
-                <label class="blog-label" for="title">title</label>
-                <input id="title" class="form-input__title blog-input" name="title" type="text">
-                <label class="blog-label title-label" for="post-body">blog away!</label>
-                <textarea id="post-body" class="form-input__body blog-input" name="post-body"></textarea>
-
-                <div class="post-btn-wrapper">
-                    <button class="blog-post-btn login-logout">post!</button>
-                </div>
-            </form>
-        </div>
+    <div class="profile-user-info">
     </div>
 </section>
 <script src="/js/profilePage.js"></script>
