--- a/views/profile.handlebars
+++ b/views/profile.handlebars
@@ -14,7 +14,7 @@
                 </a>
             </li>
             <li class="profile-item">
-                <a href="/">
+                <a href="/posts">
                     {{!-- VIEW YOUR POSTS  --}}
                     <i class="fas fa-th-large fa-2x login-logout"></i>
                 </a>
