--- a/views/user.handlebars
+++ b/views/user.handlebars
@@ -8,13 +8,13 @@
                 </a>
             </li>
             <li class="profile-item">
-                <a href="/">
+                <a href="/blog">
                     {{!-- ADD POST  --}}
                     <i class="fas fa-plus-circle fa-2x login-logout"></i>
                 </a>
             </li>
             <li class="profile-item">
-                <a href="/">
+                <a href="/posts">
                     {{!-- VIEW YOUR POSTS  --}}
                     <i class="fas fa-th-large fa-2x login-logout"></i>
                 </a>
