added very barebones form handler for blog submit

--- a/views/project.handlebars
+++ b/views/project.handlebars
@@ -31,7 +31,7 @@
                 <textarea id="post-body" class="form-input__body blog-input" name="post-body"></textarea>
 
                 <div class="post-btn-wrapper">
-                    <button class="blog-post-btn login-logout">post!</button>
+                    <button id="blog-submit" class="blog-post-btn login-logout">post!</button>
                 </div>
             </form>
         </div>
