trying stuff to create new blog post

--- a/views/project.handlebars
+++ b/views/project.handlebars
@@ -24,7 +24,7 @@
 
     <div class="profile-user-info blog-form-parent">
         <div class="blog-form-wrapper">
-            <form class="blog-form">
+            <form id="blog-form" class="blog-form">
                 <label class="blog-label" for="title">title</label>
                 <input id="title" class="form-input__title blog-input" name="title" type="text">
                 <label class="blog-label title-label" for="post-body">blog away!</label>
