--- a/views/project.handlebars
+++ b/views/project.handlebars
@@ -31,7 +31,8 @@
                 <textarea id="post-body" class="form-input__body blog-input" name="post-body"></textarea>
 
                 <div class="post-btn-wrapper">
-                    <button id="blog-submit" class="blog-post-btn login-logout">post!</button>
+                    <h2 for="blog-submit" class="blog-h2" id="post-confirm"></h2>
+                    <button id="blog-submit" name="blog-submit" class="blog-post-btn login-logout">post!</button>
                 </div>
             </form>
         </div>
