--- a/views/myposts.handlebars
+++ b/views/myposts.handlebars
@@ -1,28 +1,11 @@
 <section class="profile-page">
-    <nav class="profile-nav">
-        <ul class="profile-icons">
-            <li class="profile-item">
-                <a href="/user">
-                    {{!-- PROFILE INFO --}}
-                    <i class="fas fa-user-circle fa-2x login-logout" id="profile-deets"></i>
-                </a>
-            </li>
-            <li class="profile-item">
-                <a href="/blog">
-                    {{!-- ADD POST  --}}
-                    <i class="fas fa-plus-circle fa-2x login-logout"></i>
-                </a>
-            </li>
-            <li class="profile-item">
-                <a href="/posts">
-                    {{!-- VIEW YOUR POSTS  --}}
-                    <i class="fas fa-th-large fa-2x login-logout"></i>
-                </a>
-            </li>
-        </ul>
-    </nav>
-
+{{> profile-partial}}
+    {{#each posts}}
     <div class="profile-user-info">
+        <p>{{name}}</p>
+        <p>{{content}}</p>
+        <p>{{format_date date_created}}</p>
     </div>
+    {{/each}}
 </section>
 <script src="/js/profilePage.js"></script>
