--- a/views/homepage.handlebars
+++ b/views/homepage.handlebars
@@ -1,13 +1,17 @@
 <section class="home-page" id="home">
         {{#each posts as |post| }}
         <div class="blog-post-wrapper">
-            <h2 class="post-body">{{name}}</h2>
+            <div class="title-wrapper">
+                <h2 class="post-body">{{name}}</h2>
+                <p class="post-body poster-name">{{user.first_name}} {{user.last_name}}</p>
+            </div>
             <p class="post-body">{{content}}</p>
 
             <div class="comment-wrapper">
                 <p class="post-body post-date">{{format_date date_created}}</p>
-                <i class="far fa-comment fa-lg"></i>
+                <i class="far fa-comment fa-lg" id="comment-btn"></i>
             </div>
         </div>
         {{/each}}
 </section>
+<script src="/js/homepage.js"></script>
