got comments working, need to handle rendering

--- a/views/comments.handlebars
+++ b/views/comments.handlebars
@@ -18,7 +18,7 @@
             <input type="text" name="comment-input" id="comment-input" class="comment">
             
             <div class="comment-btn-wrapper button-pos">
-                <button class="comment-btn login-logout">post</button>
+                <button class="comment-btn login-logout" onClick="postComment({{proj_id}})">post</button>
             </div>
         </form>
     </div>
