--- a/views/homepage.handlebars
+++ b/views/homepage.handlebars
@@ -9,7 +9,7 @@
 
             <div class="comment-wrapper">
                 <p class="post-body post-date">{{format_date date_created}}</p>
-                <i class="far fa-comment fa-lg" id="comment-btn"></i>
+                <i class="far fa-comment fa-lg comment-btn" onClick="showComments({{id}})"></i>
             </div>
         </div>
         {{/each}}
