need to fix data render issue w/ comments

--- a/views/comments.handlebars
+++ b/views/comments.handlebars
@@ -22,9 +22,9 @@
             </div>
         </form>
     </div>
-    {{#each comments as |comment|}}
+    {{#each findposts as |findpost|}}
     <div class="blog-post-wrapper">
-        <p>test</p>
+        <p style="color: white">{{proj_id}}</p>
     </div>
     {{/each}}
 </section>
