--- a/views/comments.handlebars
+++ b/views/comments.handlebars
@@ -22,9 +22,9 @@
             </div>
         </form>
     </div>
-    {{#each findposts as |findpost|}}
+    {{#each comments as |comment|}}
     <div class="blog-post-wrapper">
-        <p style="color: white">{{proj_id}}</p>
+        <p style="color: white">{{body}}</p>
     </div>
     {{/each}}
 </section>
