--- a/views/comments.handlebars
+++ b/views/comments.handlebars
@@ -25,6 +25,9 @@
     {{#each comments as |comment|}}
     <div class="blog-post-wrapper">
         <p style="color: white">{{body}}</p>
+        <p style="color: white">{{format_date comment_date_created}}</p>
+        <p style="color: white">{{user.first_name}}</p>
+        <p style="color: white">{{user.last_name}}</p>
     </div>
     {{/each}}
 </section>
