formatted some css on comments

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -283,8 +283,19 @@ i {
 }
 
 /* COMMENTS PAGE  */
+.comment-create {
+    margin: 0 0 2rem 0;
+}
+
+.comment-container {
+    overflow-y: scroll;
+    padding: 0rem 1rem;
+    border-top: 5px solid var(--lblue);
+}
+
 .comment-wrapper {
     padding: 0.5rem 1.5rem;
+    margin: 0.5rem 0;
     font-family: var(--dmsans);
     color: var(--white);
 }
@@ -297,4 +308,8 @@ i {
 .comment-icon-wrapper {
     display: flex;
     flex-direction: row;
+}
+
+.comment-date {
+    text-align: right;
 }
