edited varchar length on post creation

--- a/views/homepage.handlebars
+++ b/views/homepage.handlebars
@@ -7,7 +7,7 @@
             </div>
             <p class="post-body">{{content}}</p>
 
-            <div class="comment-wrapper">
+            <div class="comment-wrapper post-date-wrapper">
                 <p class="post-body post-date">{{format_date date_created}}</p>
                 <i class="far fa-comment fa-lg comment-btn" onClick="showComments({{id}})"></i>
             </div>
