--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -10,10 +10,9 @@
 </head>
 <body>
     <header class="main-header">
-        {{!-- TODO- THINK OF BETTER NAME  --}}
         <nav class="nav-left"><a href="/" class="nav-item">tech blog</a></nav>
         <nav class="nav-right">
-            <a href="/" class="nav-item">blog</a>
+            <a href="/blog" class="nav-item">blog</a>
             <a href="/profile" class="nav-item">profile</a>
             {{#if logged_in}}
             <a href="/" id="sign-out-button" class="nav-item login-logout">log out</a>
