--- a/public/css/style.css
+++ b/public/css/style.css
@@ -85,6 +85,12 @@ i {
     height: 86vh;
 }
 
+.homepage-wrapper {
+    height: 90%;
+    padding: 0 1rem;
+    overflow-y: scroll;
+}
+
 .blog-post-wrapper {
     display: flex;
     flex-direction: column;
