--- a/views/homepage.handlebars
+++ b/views/homepage.handlebars
@@ -1,4 +1,5 @@
 <section class="home-page" id="home">
+    <div class="homepage-wrapper">
         {{#each posts as |post| }}
         <div class="blog-post-wrapper">
             <div class="title-wrapper">
@@ -13,5 +14,6 @@
             </div>
         </div>
         {{/each}}
+    </div>
 </section>
 <script src="/js/homepage.js"></script>
