--- a/views/homepage.handlebars
+++ b/views/homepage.handlebars
@@ -6,7 +6,7 @@
                 <h2 class="post-body">{{name}}</h2>
                 <p class="post-body poster-name">{{user.first_name}} {{user.last_name}}</p>
             </div>
-            <p class="post-body">{{content}}</p>
+            <p class="post-body home-post-body">{{content}}</p>
 
             <div class="comment-wrapper post-date-wrapper">
                 <p class="post-body post-date">{{format_date date_created}}</p>
