--- a/views/project.handlebars
+++ b/views/project.handlebars
@@ -1,7 +1,7 @@
 <section class="profile-page">
 {{> profile-partial}}
 
-    <div class="profile-user-info blog-form-parent">
+    <div class="profile-user-info profile-user blog-form-parent">
         <div class="blog-form-wrapper">
             <form id="blog-form" class="blog-form">
                 <label class="blog-label" for="title">title</label>
