--- a/views/user.handlebars
+++ b/views/user.handlebars
@@ -1,7 +1,7 @@
 <section class="profile-page">
 {{> profile-partial}}
 
-    <div class="profile-user-info">
+    <div class="profile-user-info profile-user">
         <div class="profile-user-info-wrapper-outer">
             <div class="profile-user-info-wrapper">
                 <h2 class="profile-user-name">{{first_name}} {{last_name}}</h2>
