--- a/views/comments.handlebars
+++ b/views/comments.handlebars
@@ -15,10 +15,10 @@
     <div class="comment-create">
         <form class="create-comment" id="comment-submit">
             <label for="comment-input">leave a comment</label>
-            <input type="text" name="comment-input" id="comment-input" class="comment">
+            <input type="text" name="comment-input" id="comment-input" class="comment comment-input">
             
-            <div class="comment-btn-wrapper button-pos">
-                <button class="comment-btn login-logout" onClick="postComment({{proj_id}})">post</button>
+            <div class="comment-btn-wrapper">
+                <button class="comment-btn comment-submit-btn login-logout" onClick="postComment({{proj_id}})">post</button>
             </div>
         </form>
     </div>
